--- a/src/views/partials/_menu.ejs
+++ b/src/views/partials/_menu.ejs
@@ -28,7 +28,7 @@
           <div class=" col-md-2 di_none">
             <ul class="email text_align_right">
                <li><a href="/register">Register</a></li>
-               <li><a href="Javascript:void(0)">Login</a></li>
+               <li><a href="/login">Login</a></li>
             <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
             </ul>
           </div>
