--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -5,7 +5,7 @@
 
       <!-- team -->
       <div>
-        <h1>Dashboard Page</h1>
+        <h1><%= user.username %></h1>
       </div>
       <!-- end team -->
       <!-- end footer -->
