--- a/src/views/partials/_menu.ejs
+++ b/src/views/partials/_menu.ejs
@@ -15,6 +15,9 @@
                       <li><a href="/about">About</a></li>
                       <li><a href="services.html">Services</a></li>
                       <li><a href="/photos">Photos</a></li>
+                      <% if (user) { %>
+                      <li><a href="/users/dashboard">Dashboard</a></li>
+                       <% } %>
                       <li><a href="projects.html">Projects</a></li>
                       <li><a href="blog.html">Blog</a></li>
                       <li><a href="contact.html">Contact</a></li>
@@ -25,13 +28,23 @@
                 </nav>
              </div>
           </div>
+
+          <% if (user) { %>
           <div class=" col-md-2 di_none">
             <ul class="email text_align_right">
-               <li><a href="/register">Register</a></li>
-               <li><a href="/login">Login</a></li>
-            <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+               <li><a href="/users/logout">Logout</a></li>
             </ul>
           </div>
+         <% } else { %>
+            <div class=" col-md-2 di_none">
+               <ul class="email text_align_right">
+                  <li><a href="/register">Register</a></li>
+                  <li><a href="/login">Login</a></li>
+               <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+               </ul>
+            </div>
+         <% } %>
+         
        </div>
     </div>
  </header>
