--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -8,7 +8,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>lenslight</title>
+      <title>Photox</title>
+      <img src="/images/logo.png" alt="logo">
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
