Photo upload to cloudinary.

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -49,10 +49,16 @@
                  </div>
                  <div class="tz-gallery">
                           <div class="row">
+                            <% if (photos.length === 0) { %>
+                                <div class="col-md-12 text_align_center">
+                                    <h1 style="color: #D43A8E;">No Photos Found</h1>
+                                </div>
+                              <% } else { %>
+                                
                              <% photos.forEach(photo => { %>
                                 <div class="col-lg-4 col-md-6 ma_bottom30">
                                    <div class="lightbox">
-                                      <img src="/images/g1.jpg" alt="Bridge">
+                                      <img src="<%= photo.url %>" alt="Bridge">
                                       <div class="view_main">
                                         <div class="pose">
                                         <a class="read_more" href="/photos/<%=photo._id%>"><img src="images/ga.png" alt="#"/></a>
@@ -63,7 +69,7 @@
                                    </div>
                                 </div>
                             <% }); %>
-                           
+                            <% } %>
      
                        <div class="col-md-12">
                          <a class="plus_btn" href="gallery.html">+</a>
@@ -96,7 +102,7 @@
                   </div>
                 </div>
                 <div class="col-md-10 offset-md-1">
-                  <form id="request" class="main_form" method="POST" action="/photos">
+                  <form id="request" class="main_form" method="POST" action="/photos" enctype="multipart/form-data">
                     <div class="row">
                       <div class="col-md-12">
                         <input class="form_control" placeholder="Name" type="text" name="name">
@@ -107,7 +113,7 @@
                       </div>
 
                       <div style="margin-bottom: 20px ;" class="col-md-12">
-                        <input type="file" class="form-control-file">
+                        <input type="file" name="image"  class="form-control-file">
                       </div>
 
                       <div class="col-md-12">
