--- a/src/views/partials/_menu.ejs
+++ b/src/views/partials/_menu.ejs
@@ -17,9 +17,9 @@
                       <li><a href="/photos">Photos</a></li>
                       <% if (user) { %>
                       <li><a href="/users/dashboard">Dashboard</a></li>
+                      <li><a href="/users">Users</a></li>
                        <% } %>
                       <li><a href="projects.html">Projects</a></li>
-                      <li><a href="blog.html">Blog</a></li>
                       <li><a href="contact.html">Contact</a></li>
                    </ul>
                    <button class="nav-toggler">
