--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -2,16 +2,14 @@
    <body class="main-layout inner_page">
        <%- include('./partials/_loader.ejs') %>
          <%- include('./partials/_menu.ejs') %>
-
- 
-            <!--  customers -->
+          <!--  customers -->
             <div class="customers">
               <div class="container">
                 <div class="row">
                   <div class="col-md-12">
                     <div class="titlepage text_align_center">
-                      <span>04</span>
-                      <h2>Welcome <%= user.username %></h2>
+                      <span>User Detail Page</span>
+                      <h2><%= user.username %></h2>
                     </div>
                   </div>
                 </div>
@@ -24,13 +22,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-12 text_align_center">
-                    <button data-toggle="modal" data-target=".bd-example-modal-lg" type="button"
-                      style=" margin-top:100px; margin-left: 50%; transform: translateX(-50%);" class="read_more"
-                      href="about.html">Add New Photo</button>
-                  </div>
-                </div>
+              
               </div>
             </div>
             <!-- end customers  -->
@@ -43,19 +35,19 @@
                     <div class="col-md-12">
                        <div class="titlepage text_align_center">
                           <span>03</span>
-                          <h2>Our gallery</h2>
+                          <h2><%= user.username %> gallery</h2>
                        </div>
                     </div>
                  </div>
                  <div class="tz-gallery">
                           <div class="row">
-                            <% if (photos.length === 0) { %>
+                            <% if (user.photos.length === 0) { %>
                                 <div class="col-md-12 text_align_center">
                                     <h1 style="color: #D43A8E;">No Photos Found</h1>
                                 </div>
                               <% } else { %>
                                 
-                             <% photos.forEach(photo => { %>
+                             <% user.photos.forEach(photo => { %>
                                 <div class="col-lg-4 col-md-6 ma_bottom30">
                                    <div class="lightbox">
                                       <img src="<%= photo.url %>" alt="Bridge">
@@ -71,66 +63,9 @@
                             <% }); %>
                             <% } %>
                           </div>
-                       <div class="col-md-12">
-                         <a class="plus_btn" href="gallery.html">+</a>
-                       </div>
                     </div>
                  </div>
               </div>
            </div>
-
-
-<!-- Modal  -->
-            <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div style="margin-top: 50px; margin-bottom: 50px;" class="container">
-              <div class="row">
-                <div class="col-md-12 ">
-                  <div class="text_align_center">
-                    <h2 style="
-                    font-size: 30px;
-                    margin-bottom: 20px;
-                    color: #D43A8E;
-                ">Add New Photo</h2>
-                  </div>
-                </div>
-                <div class="col-md-10 offset-md-1">
-                  <form id="request" class="main_form" method="POST" action="/photos" enctype="multipart/form-data">
-                    <div class="row">
-                      <div class="col-md-12">
-                        <input class="form_control" placeholder="Name" type="text" name="name">
-                      </div>
-                      <div class="col-md-12">
-                        <textarea name="description" style="height: 150px;" class="form_control"
-                          placeholder="Description" rows="5"></textarea>
-                      </div>
-
-                      <div style="margin-bottom: 20px ;" class="col-md-12">
-                        <input type="file" name="image"  class="form-control-file">
-                      </div>
-
-                      <div class="col-md-12">
-                        <div class="group_form">
-                          <button class="read_more">Upload File</button>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-            
       <!-- end footer -->
       <%- include('./partials/_footer.ejs') %>
