--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -26,7 +26,19 @@
               </div>
             </div>
             <!-- end customers  -->
-
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="text_align_center">
+                    <% if (isFollowing) {  %>
+                      <a style="margin:20px auto;" class="read_more" href="/users/<%= user.id %>/unfollow?_method=PUT">UNFOLLOW</a>
+                      <% } else { %> 
+                      <a style="margin:20px auto;" class="read_more" href="/users/<%= user.id %>/follow?_method=PUT">FOLLOW</a>
+                        <% } %>
+                  </div>
+                </div>
+              </div>
+            </div>
 
 
             <div class="gallery">
@@ -34,11 +46,11 @@
                  <div class="row">
                     <div class="col-md-12">
                        <div class="titlepage text_align_center">
-                          <span>03</span>
-                          <h2><%= user.username %> gallery</h2>
+                          <h2><%= user.username %> Gallery</h2>
                        </div>
                     </div>
                  </div>
+                 
                  <div class="tz-gallery">
                           <div class="row">
                             <% if (user.photos.length === 0) { %>
@@ -64,6 +76,7 @@
                             <% } %>
                           </div>
                     </div>
+                    
                  </div>
               </div>
            </div>
