--- a/src/views/photo.ejs
+++ b/src/views/photo.ejs
@@ -12,6 +12,15 @@
                 <h2><%=photo.name%></h2>
                 <p> <%=photo.description%></p>
                 <a class="read_more" href="/users/detail/<%=photo.user.id %>">Artist : <%= photo.user.username %></a>
+
+                <div style="margin-top: 30px ;">
+                  <ul style="display: flex; justify-content: space-between;">
+                     <li><a style="min-width: 266px;" class="read_more" href="/photos/<%= photo.id %>/update?_method=PUT">Update</a></li>
+                     <li><a style="min-width: 266px;" class="read_more" href="/photos/<%= photo.id %>/delete?_method=DELETE" onclick="return confirm('Are You Sure?')">Delete</a></li>
+                  </ul>
+               </div>
+
+
               </div>
             </div>
             <div class="col-md-6">
