--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -9,26 +9,24 @@
             <div class="row">
               <div class="col-md-12 ">
                 <div class="titlepage text_align_center">
-                  <span>06</span>
                   <h2>Requste A Call Back</h2>
                 </div>
               </div>
               <div class="col-md-8 offset-md-2">
-                <form id="request" class="main_form">
+                <form id="request" class="main_form" method="post" action="/contact">
                   <div class="row">
                     <div class="col-md-12">
-                      <input class="form_control" placeholder="Your name" type="type" name=" Name"> 
+                      <input class="form_control" placeholder="Your name" type="text" name="name"> 
                     </div>
                     <div class="col-md-12">
-                      <input class="form_control" placeholder="Phone Number" type="type" name="Phone Number">                          
+                      <input class="form_control" placeholder="Email" type="email" name="email">                          
                     </div>
                     <div class="col-md-12">
-                      <input class="form_cont" placeholder="Message" type="type" name="message">
+                      <input class="form_cont" placeholder="Message" type="text" name="message">
                     </div>
                     <div class="col-md-12">
                       <div class="group_form">
-                        <button class="send_btn">Send</button>
-                        <button class="send_btn">Location</button>
+                        <button class="send_btn" type="submit">Send</button>
                       </div>
                     </div>
                   </div>
