--- a/src/views/partials/_menu.ejs
+++ b/src/views/partials/_menu.ejs
@@ -20,7 +20,7 @@
                       <li><a href="/users">Users</a></li>
                        <% } %>
                       <li><a href="projects.html">Projects</a></li>
-                      <li><a href="contact.html">Contact</a></li>
+                      <li><a href="/contact">Contact</a></li>
                    </ul>
                    <button class="nav-toggler">
                    <span></span>
