Edit index page,

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -89,7 +89,7 @@
                   </div>
                   <% if (user.followers.length === 0) { %>
                       <div class="col-md-12 text_align_center">
-                          <h1 style="color: #D43A8E;">No Followers Found</h1>
+                          <h1 style="color: #fcb317;">No Followers Found</h1>
                       </div>
                     <% } %>
                   <% user.followers.forEach((user)=> { %>
@@ -130,7 +130,7 @@
    
                   <% if (user.following.length === 0) { %>
                     <div class="col-md-12 text_align_center">
-                        <h1 style="color: #D43A8E;">No Followers Found</h1>
+                        <h1 style="color: #fcb317;">No Followers Found</h1>
                     </div>
                   <% } %>
                   <% user.following.forEach((user)=> { %>
