--- a/src/views/partials/_footer.ejs
+++ b/src/views/partials/_footer.ejs
@@ -4,13 +4,11 @@
           <div class="row">
                    <div class="col-md-12">
                          <ul class="menu_footer">
-                            <li><a class="active" href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a class="active" href="/index">Home</a></li>
+                            <li><a href="/about">About</a></li>
+                            <li><a href="/services">Services</a></li>
+                            <li><a href="/photos">Photos</a></li>
+                            <li><a href="/contact">Contact</a></li>
                          </ul>
                    </div>
                    <div class="col-md-12">
@@ -26,7 +24,7 @@
           <div class="container">
              <div class="row d_flex">
                 <div class="col-md-8">
-                   <p>© 2022 All Rights Reserved. Design by  <a href="https://html.design/"> Free html Templates</a></p>
+                   <p>© 2022 All Rights Reserved. Design by  <a href="#"> Berkay ERGUN</a></p>
                 </div>
                 <div class="col-md-4">
                   <ul class="social_icon_bottom ">
