--- a/src/views/partials/_menu.ejs
+++ b/src/views/partials/_menu.ejs
@@ -1,10 +1,9 @@
 <header class="header-area">
     <div class="container-fluid">
        <div class="row ">
-         
           <div class=" col-md-2 col-sm-3">
              <div class="logo">
-                <a href="/">lens<br><span>light</span></a>
+                <a href="/">PhotoX<br></a>
              </div>
           </div>
           <div class="col-md-8 col-sm-9">
@@ -13,13 +12,11 @@
                    <ul>
                       <li><a class="active" href="/">Home</a></li>
                       <li><a href="/about">About</a></li>
-                      <li><a href="services.html">Services</a></li>
                       <li><a href="/photos">Photos</a></li>
                       <% if (user) { %>
                       <li><a href="/users/dashboard">Dashboard</a></li>
                       <li><a href="/users">Users</a></li>
                        <% } %>
-                      <li><a href="projects.html">Projects</a></li>
                       <li><a href="/contact">Contact</a></li>
                    </ul>
                    <button class="nav-toggler">
