--- a/src/views/photo.ejs
+++ b/src/views/photo.ejs
@@ -1,87 +1,85 @@
 <%- include('./partials/_header.ejs') %>
-   <body class="main-layout inner_page">
-   <%- include('./partials/_loader.ejs') %>
-       <%- include('./partials/_menu.ejs') %>
-        <!-- about -->
-      <div class="about">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="titlepage text_align_left">
-                
-                <h2><%=photo.name%></h2>
-                <p> <%=photo.description%></p>
-                <a class="read_more" href="/users/detail/<%=photo.user.id %>">Artist : <%= photo.user.username %></a>
 
-                <div style="margin-top: 30px ;">
-                  <ul style="display: flex; justify-content: space-between;">
-                     <li><button style="min-width: 266px;" class="read_more" data-toggle="modal", data-target="#updateModal" >Update</button></li>
-                     <li><a style="min-width: 266px;" class="read_more" href="/photos/<%= photo.id %>/delete?_method=DELETE" onclick="return confirm('Are You Sure?')">Delete</a></li>
-                  </ul>
-               </div>
+<body class="main-layout inner_page">
+  <%- include('./partials/_loader.ejs') %>
+  <%- include('./partials/_menu.ejs') %>
+  <!-- about -->
+  <div class="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="titlepage text_align_left">
 
-
-              </div>
+            <h2><%=photo.name%></h2>
+            <p> <%=photo.description%></p>
+            <a class="read_more" href="/users/detail/<%=photo.user.id %>">Artist : <%= photo.user.username %></a>
+            <% if (user && isOwner) {%>
+            <div style="margin-top: 30px ;">
+              <ul style="display: flex; justify-content: space-between;">
+                <li><button style="min-width: 266px;" class="read_more" data-toggle="modal" , data-target="#updateModal">Update</button></li>
+                <li><a style="min-width: 266px;" class="read_more" href="/photos/<%= photo.id %>/delete?_method=DELETE" onclick="return confirm('Are You Sure?')">Delete</a></li>
+              </ul>
             </div>
-            <div class="col-md-6">
-              <div class="about_img">
-                <figure><img style="z-index: auto;" src="<%= photo.url %>" alt="<%= photo.name %>"/></figure>
-              </div>
-            </div>
+            <% } %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="about_img">
+            <figure><img style="z-index: auto;" src="<%= photo.url %>" alt="<%= photo.name %>" /></figure>
           </div>
         </div>
       </div>
-      <!-- end about -->
+    </div>
+  </div>
+  <!-- end about -->
 
-      <!-- Modal  -->
-      <div id="updateModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div style="margin-top: 50px; margin-bottom: 50px;" class="container">
-            <div class="row">
-              <div class="col-md-12 ">
-                <div class="text_align_center">
-                  <h2 style="
+  <!-- Modal  -->
+  <div id="updateModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div style="margin-top: 50px; margin-bottom: 50px;" class="container">
+          <div class="row">
+            <div class="col-md-12 ">
+              <div class="text_align_center">
+                <h2 style="
                   font-size: 30px;
                   margin-bottom: 20px;
                   color: #D43A8E;
               ">Update Photo</h2>
-                </div>
               </div>
-              <div class="col-md-10 offset-md-1">
-                <form id="request" class="main_form" method="post" action="/photos/<%= photo.id %>/update?_method=PUT" enctype="multipart/form-data">
-                  <div class="row">
-                    <div class="col-md-12">
-                      <input class="form_control" value="<%= photo.name%>" type="text" name="name">
-                    </div>
-                    <div class="col-md-12">
-                      <textarea name="description" style="height: 150px;" class="form_control"
-                       rows="5"><%= photo.description %></textarea>
-                    </div>
+            </div>
+            <div class="col-md-10 offset-md-1">
+              <form id="request" class="main_form" method="post" action="/photos/<%= photo.id %>/update?_method=PUT" enctype="multipart/form-data">
+                <div class="row">
+                  <div class="col-md-12">
+                    <input class="form_control" value="<%= photo.name%>" type="text" name="name">
+                  </div>
+                  <div class="col-md-12">
+                    <textarea name="description" style="height: 150px;" class="form_control" rows="5"><%= photo.description %></textarea>
+                  </div>
 
-                    <div style="margin-bottom: 20px ;" class="col-md-12">
-                      <input type="file" name="image" class="form-control-file">
-                    </div>
+                  <div style="margin-bottom: 20px ;" class="col-md-12">
+                    <input type="file" name="image" class="form-control-file">
+                  </div>
 
-                    <div class="col-md-12">
-                      <div class="group_form">
-                        <button class="read_more">Send Information</button>
-                      </div>
+                  <div class="col-md-12">
+                    <div class="group_form">
+                      <button class="read_more">Send Information</button>
                     </div>
                   </div>
-                </form>
-              </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
 
-   <%- include('./partials/_footer.ejs') %>
+  <%- include('./partials/_footer.ejs') %>
